# kafka-testing

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  consumer.docker.properties  consumer.properties  docker-compose.yml  flake.nix  producer.docker.properties  producer.properties
cushion/: Cargo.toml
cushion/benches/: main.rs
cushion/src/: cushion.rs  lib.rs
manifests/: kafka-user.yaml  pod.yaml
src/: config.rs  consumer.rs  producer.rs
