[package]
name = "kafka-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
clap = { version = "4.4.11", features = ["derive"] }
rdkafka = { version = "0.36.0", features = ["ssl", "sasl"] }
log = "0.4.20"
parse_duration = "2.1.1"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
signal-hook = "0.3.17"
futures = "0.3.30"
